Mon Sep 29 23:52:52 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.in: Regenerated with automake 1.2c.

Sat Sep 27 23:01:58 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am: Add new `build' subdirectory to SUBDIRS.
	* configure.in: Add build/Makefile to AC_OUTPUT clause.
	* Makefile.in, configure: Regenerated.

	* Makefile.in, aclocal.m4: Regenerated with automake 1.2a.

Tue Sep 16 00:19:46 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* README, ltconfig, ltmain.sh: New libtool: 1.0c.

Thu Sep 11 11:28:24 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* ltmain.sh: Added a missing '\' before \n on line 32.

Thu Aug 28 23:40:43 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	New libtool: 1.0b.
	* ltconfig, ltmain.sh, config.guess: Freshly libtoolized.
	* Makefile.in, aclocal.m4, configure: Regenerated, salamander-style.

Wed Aug 27 11:35:09 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.in: Regenerated, so it uses "tar", not "gtar".

	* configure.in: Use the QuickThreads assembler fragment with Irix
	dynamic linking support for Irix 6 as well as Irix 5.  Thanks to
	Jesse Glick.
	* configure: Regenerated.

Sun Aug 24 15:51:12 1997  Mikael Djurfeldt  <mdj@kenneth>

	* acinclude.m4 (GUILE_NAMED_CHECK_FUNC): New macro: Tagged test,
	so that test for the same function can be performed multiple
	times.

	* configure.in (AC_CHECK_HEADERS): Test for rxposix.h,
	rx/rxposix.h.  Add library rx only if regcomp can't be found
	without it.

	* acconfig.h (HAVE_REGCOMP): Added it here since autoheader misses
	it for some reason!

Fri Aug 22 21:21:49 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* THANKS: New file.
	* Makefile.in, aclocal.m4, configure: Regenerated.

Wed Jul 23 20:24:27 1997  Mikael Djurfeldt  <djurf@zafir.e.kth.se>

	* configure.in: Added thread support for the alpha architecture.
	configure: Regenerated.

Thu Jul 17 07:56:05 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* configure.in: use AC_CHECK_FUNCS for sethostent etc.,