@@ -14,6 +14,7 @@ Bug reports and fixes from:
 Christopher Lee
       Shiro Kawai
      Roland McGrath
+      Clark McGrew
      Thomas Morgan
         Jim Ravan
      Daniel Risacher
